--- a/service/requirements.txt
+++ b/service/requirements.txt
@@ -1,6 +1,24 @@
+catboost==1.2.5
+category-encoders==2.5.0
+datasets==3.0.0
 fastapi==0.75.1
+huggingface-hub==0.25.1
+lightgbm==3.3.2
 loguru==0.6.0
+matplotlib==3.4.2
+nltk==3.8.1
+numpy==1.22.4
+pandas==1.4.2
+psycopg2-binary==2.9.3
 pydantic==1.9.1
 python-dotenv==1.0.1
+pytorch-ignite==0.5.1
+scikit-learn==1.1.1
+seaborn==0.11.1
+sklearn-pandas==2.2.0
 SQLAlchemy==1.4.35
+torch==2.4.0+cu124
+torchmetrics==1.4.1
+tqdm==4.66.5
+transformers==4.44.2
 uvicorn==0.16.0
